centre ios align fix

--- a/src/Routinery.css
+++ b/src/Routinery.css
@@ -266,6 +266,7 @@ body {
   justify-content: center;
   justify-items: center;
   justify-self: anchor-center;
+  align-items: center;
   margin-top: 50px;
   .routines {
     display: flex;
